--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -145,15 +145,8 @@ Trečiojo laboratorinio darbo reikalavimai.
   \hline
 	Euristika & Defekto sunkumas & Komentaras \\ \hline
 	Būsenos matomumas & 1 & Nėra pagrindinio puslapio indikatorių, todėl šiame lange neaiški vartotojo pozicija. \\ \hline
-	Sistemos atitikimas realiam pasauliui & 0 & - \\ \hline
-	Naudotojo valdomas dialogas & 0 & - \\ \hline
 	Darna ir standartai & 1 & Nerealizuotos ikonos. Maketo 1 puslapyje, pagrindiniame lange, skiltis "Naujienos" užgriozdina langą tekstine informacija. \\ \hline
-	Klaidų prevencija & 0 & - \\ \hline
-	Atpažinimas geriau nei atsiminimas & 0 & - \\ \hline
 	Naudojimo lankstumas ir našumas & 3 & Maketo 7 puslapyje, mokėjimo pavedimo lange, nerealizuotas gavėjų siūlymas pagal kriterijus, vartotojas duomenis turi įvesti pats. Taip pat Maketo 1 puslapyje, pagrindiniame lange, vartotojas nemato sąskaitos bei su ja susijusių duomenų. Kad juos pasiektų vartotojas privalo išskleisti sąskaitos juostą. \\ \hline
-	Estetiškas ir minimalistiniz dizainas & 0 & - \\ \hline
-	Remti klaidų atpažinimą, jų priežasčių nustatymą ir taisymą & 0 & - \\ \hline
-	Pagalba ir dokumentacija & 0 & -  \\ \hline
 \end{longtable}
 
 \begin{longtable}[!htb]{|p{3.5cm}|p{1.9cm}|p{9.6cm}|}
@@ -211,15 +204,11 @@ Trečiojo laboratorinio darbo reikalavimai.
   \hline
 	Euristika & Defekto sunkumas & Komentaras \\ \hline
 	Būsenos matomumas & 1 & Maketo 4 puslapyje nenurodyta vartotojo būsena. \\ \hline
-	Sistemos atitikimas realiam pasauliui & 0 & - \\ \hline
-	Naudotojo valdomas dialogas & 0 & - \\ \hline
-	Darna ir standartai & 1 & Egzistuoja iš esmės skirtingos langų temos. \\ \hline
+	Darna ir standartai & 2 & Egzistuoja iš esmės skirtingos langų temos. Maketo 4 puslapyje nenurodyta vartotojo būsena. \\ \hline
 	Klaidų prevencija & 3 & Sujungti tarpusavyje meniu mygtukai kelia gretimos funkcijos pasirinkimo grėsmę. Taip pat maketo 1 lango meniu esantis mygtukas "Paieška" su padidinimo stiklo ikona sufleruoja, jog tai paieškos juosta, o ne mygtukas, atidarantis paieškos puslapį.\\ \hline
 	Atpažinimas geriau nei atsiminimas & 1 & Trūksta grafinių elementų, kurie padarytų naršymą efektyvesnį bei intuityvesnį. \\ \hline
 	Naudojimo lankstumas ir našumas & 2 & Mokėjimo languose vartotojas neturi galimybės vieno mygtuko paspaudimu pasiekti pagrindiniame meniu vaizduojamas funkcijas. Taip pat atliekant mokėjimo pavedimą vartotojui siūlomi tik ankščiau naudoti gavėjai. Trūksta paieškos rezultatų apdorojamumo. \\ \hline
-	Estetiškas ir minimalistinis dizainas & 0 & - \\ \hline
-	Remti klaidų atpažinimą, jų priežasčių nustatymą ir taisymą & 0 & - \\ \hline
-	Pagalba ir dokumentacija & 0 & Sistema turi sufleruoti vartotojui, jog tam tikruose languose siekdamas grįžti atgal jis turi paspausti ant tuščios vietos. \\ \hline
+	Pagalba ir dokumentacija & 1 & Sistema turi sufleruoti vartotojui, jog tam tikruose languose siekdamas grįžti atgal jis turi paspausti ant tuščios vietos. \\ \hline
 \end{longtable}
 \end{center}
 \begin{center}
@@ -272,7 +261,7 @@ Trečiojo laboratorinio darbo reikalavimai.
 % Niekaip neišsiaiškinau ar apibendrinimai turi būt kiekvieno vertintojo atskirai, ar abiejų kartu.
 Šis maketas yra minimalistinis, ko pasekoje neturi didelio kiekio defektų euristiniame patikrinime. Maketas inovatyvus pakankamai paprastas naudoti, tačiau jame trūksta pagalbos ir dokumentacijos naujiems vartotojams, o patyruniems vartotojams jis gali pasirodyti per daug paprastas. Jis gali būti ne toks patogus vyresnio amžiaus žmonėms dėl to, kad tarpusavyje sujunti meniu mygtukai sukelia klaidos tikimybę netikslių paspaudimų atveju. Šis modelis galbūt per daug minimalistinis, kad jį visą būtų galima naudoti detaliojo prototipo kūrime, tačiau kai kuriuos akcentus yra galimybė panaudoti.
 \section{Išvados}
-Detaliojo prototipo pagrindu pasirinkome Justo Tvarijono maketą patrauklesnės informacijos architektūros bei vertikaliojo meniu. Mažėsnių hierachijos langų struktūrą importuosime iš Džiugo Mažulio maketo dėl patrauklesnio dydžio, išdėstymo. 
+Detaliojo prototipo pagrindu pasirinkome Justo Tvarijono maketą, kuris pranoko alternatyvas informacijos architektūra bei vertikaliuoju meniu. Mažėsnių hierachijos langų struktūrą importuosime iš Džiugo Mažulio maketo dėl patrauklesnio dydžio bei įprastesnio išdėstymo. 
 \section{Priedai}
 	\begin{itemize}
 		\item Justas Tvarijonas - VU MIF programų sistemų sistemos 3 kurso studentas.
