kažką prie išvados prirašiau

--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -258,10 +258,10 @@ Trečiojo laboratorinio darbo reikalavimai.
 \end{longtable}
 \end{center}
 \subsection{Apibendrinimas}
-% Niekaip neišsiaiškinau ar apibendrinimai turi būt kiekvieno vertintojo atskirai, ar abiejų kartu.
-Šis maketas yra minimalistinis, ko pasekoje neturi didelio kiekio defektų euristiniame patikrinime. Maketas inovatyvus pakankamai paprastas naudoti, tačiau jame trūksta pagalbos ir dokumentacijos naujiems vartotojams, o patyruniems vartotojams jis gali pasirodyti per daug paprastas. Jis gali būti ne toks patogus vyresnio amžiaus žmonėms dėl to, kad tarpusavyje sujunti meniu mygtukai sukelia klaidos tikimybę netikslių paspaudimų atveju. Šis modelis galbūt per daug minimalistinis, kad jį visą būtų galima naudoti detaliojo prototipo kūrime, tačiau kai kuriuos akcentus yra galimybė panaudoti.
+Šis maketas yra minimalistinis, ko pasekoje neturi didelio kiekio defektų euristiniame patikrinime, tačiau trūksta darnos, dokumentacijos. Jis gali būti ne toks patogus vyresnio amžiaus žmonėms dėl to, kad tarpusavyje sujunti meniu mygtukai sukelia klaidos tikimybę netikslių paspaudimų atveju. Šis modelis galbūt per daug minimalistinis, kad jį visą būtų galima naudoti detaliojo prototipo kūrime, tačiau kai kuriuos akcentus yra galimybė panaudoti.
 \section{Išvados}
-Detaliojo prototipo pagrindu pasirinkome Justo Tvarijono maketą, kuris pranoko alternatyvas informacijos architektūra bei vertikaliuoju meniu. Mažėsnių hierachijos langų struktūrą importuosime iš Džiugo Mažulio maketo dėl patrauklesnio dydžio bei įprastesnio išdėstymo. 
+Vertindami maketus pamatėme, kad mūsų maketuose labiausiai pažeistos klaidų prevencijos ir lankstumo euristikos, tačiau dauguma langų tenkina atitikimo realiam pasauliui bei estetiškumo euristikas. Maketai didesnių euristikos pažeidimų neturi išskyrsu klaidų prevencijos pažeidimus, todėl didžioji dalis klaidų yra lengvai pataisomos. Taigi, įvertine kiekvieną maketą nutarėme: \\
+Detaliojo prototipo pagrindu pasirinkome Justo Tvarijono maketą, kuris pranoko alternatyvas informacijos architektūra bei vertikaliuoju meniu. Mažėsnių hierachijos langų struktūrą importuosime iš Džiugo Mažulio maketo dėl patrauklesnio dydžio bei įprastesnio išdėstymo.  Kiekvienas ne pagrindinis langas turės "duonos trupinių" navigacijos elementą, po kiekvieno atlikto veiksmo bus parodomas patvirtinimo langas.
 \section{Priedai}
 	\begin{itemize}
 		\item Justas Tvarijonas - VU MIF programų sistemų sistemos 3 kurso studentas.
