--- a/ZKS3.tex
+++ b/ZKS3.tex
@@ -193,6 +193,7 @@ Trečiojo laboratorinio darbo reikalavimai.
 	\end{longtable}
 	\end{center}
 \subsection{Apibendrinimas}
+Šis maketas ne tik nepalieka galimybių vartotojams padaryti netyčinių klaidų, bet taip pat yra nesunkiai įsimenamas, patrauklus akiai. Maketo langai išlaiko vientisą stilių bei padeda vartotojui nepasiklysti svetainės puslapiuose, atkreipia dėmesį į svarbiausią bei aktualiausią funkcionalumą. Nepaisant ne iki galo realizuotų grafinių elementų, maketas atitinka gero dizaino standartus.
 
 \section{Michal Stankevič maketo vertinimas}
 \subsection{Euristinis tikrinimas}
