5 darbe naudojamos lentelės

--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -81,12 +81,180 @@ Penktojo laboratorinio darbo reikalavimai.
 	\item Atsidaryti mokėjimo išrašą.
 	\item Nustatyti išrašą nuo 2018-07-01.
 \end{enumerate}
+Matavimai:
+\begin{itemize}
+	\item Kiek laiko užtruko atliktį užduotį.
+	\item Klaidų skaičius.
+	\item Sustojimų skaičius.
+	\item Pagalbos prašymų skaičius.
+\end{itemize}
 \subsection{Metodas}
+Stebėjimai testuojant su naudotojais. Vartotojai užduotis atlieka vieni. Prieš testavimą vartotojas gaus klausimyną, kuris nustatis vartotojo charakteristika, tada bus pateikta internetinė sąsaja. Iš užduočių sąrašo prašysime vartotojo vykdyti užduotis po vieną ir stebėsime vartotojo sėkmę. Vartotojas bet kuriuo metu galės prašyti pagalbos. 
 \subsection{Aplinka}
+Dalis testavimo vykdoma gyvai, dalis nuotoliniu būdu,naudojant discord programinę įrangą. Abiejais atvejais vartotojo ekranas ir atliekami judesiai buvo stebima mūsų.
 \subsection{Dalyviai}
+\begin{center}
+	\captionof{table}{Dalyvių lentelė}
+	\begin{tabular}{ |p{1cm} | p{2cm} | p{4cm} | p{4cm} |}
+	\hline
+ID&Amžius&Profesija&IT raštingumas \\ \hline
+1&-&-&- \\ \hline
+2&-&-&- \\ \hline
+\end{tabular}
+\end{center}
+
 \section{Testavimo rezultatai}
 \subsection{Užduočių vykdymo rezultatai}
-\subsection{dalyvių komentarai}
+\begin{center}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+	\begin{table}[!pht]
+	\caption{Pirmo dalyvio lentelė}
+	\begin{tabular}{ |p{1.8cm} | p{3.4cm} | p{3.4cm} | p{2.5cm} | p{3.5cm}|}
+	\hline
+	Užduotis&Padarytos klaidos&Sustojimų skaičius&Užtrukta laiko&Pagalbos prašymai\\ \hline
+1.&-&-&-&- \\ \hline
+2.&-&-&-&- \\ \hline
+3.&-&-&-&- \\ \hline
+4.&-&-&-&- \\ \hline
+5.&-&-&-&- \\ \hline
+6.&-&-&-&- \\ \hline
+7.&-&-&-&- \\ \hline
+8.&-&-&-&- \\ \hline
+9.&-&-&-&- \\ \hline
+10.&-&-&-&- \\ \hline
+11.&-&-&-&- \\ \hline
+12.&-&-&-&- \\ \hline
+\end{tabular}
+\end{table}
+\vspace{0.7cm}
+\end{center}
+\subsection{Dalyvių komentarai}
+\begin{center}
+	\captionof{table}{Dalyvių komentarai}
+	\begin{tabular}{ |p{3cm}| p{12cm} |}
+	\hline
+Užduoties Nr.&Komentarai\\ \hline
+	\end{tabular}
+\end{center}
 \section{Rekomendacijos}
 \section{Priedai}
 \subsection{Klausimynai}
