--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -258,6 +258,19 @@ Užduoties Nr.&Komentarai\\ \hline
 \section{Rekomendacijos}
 \section{Priedai}
 \subsection{Klausimynai}
+\subsubsection{Klausimynas prieš testavimą}
+\begin{itemize}
+	\item Kaip vertinate savo IT žinias?
+	\item Kiek laiko jau naudojatės internetine pankininkyste?
+	\item Kiek valandų per dieną paprastai naudojatės kompiuteriu?
+\end{itemize}
+\subsubsection{Klausimynas po testavimo}
+	\begin{itemize}
+			\item Kas labiausiai patiko prototipe?
+			\item Kas labiausiai nepatiko?
+			\item Kaip vertinate sistemą bendrai?
+			\item Ar susidūrėte su sunkumais, netikėtumais?
+	\end{itemize}
 \subsection{Dalyvių rezultatų lentelės}
 \subsection{dalyvio sutikimo dalyvauti testavime raštas}
 \end{document}
