--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -58,6 +58,9 @@
 \section{Santrauka}
 \section{Įvadas}
 \subsectionnonum{Prototipas}
+Prototipe įgyvendintas internetinės bankininkystės sistema, šis prototipas yra minimalistinis, kad būtų patogesnis mažai ir vidutiniškai patyrusiems IT vartotojams, įgyvendintos svarbiausios bei dažniausiai naudojamos banko funkcijos.
+\subsectionnonum{Prototipo kūrimo priemonė}
+Prototipas kurtas su "Axure" programine įranga, tai pakankamai sudėtinga, tačiau galinga prototipavimo priemonė, kurią suprasti padėjo dėstytojos pateikti mokomieji vaizdo įrašai.
 \subsectionnonum{Dalykinė sritis}
 Internetinė bankininkystė.
 \subsectionnonum{Probleminė sritis}
@@ -255,6 +258,7 @@ ID&Amžius&Profesija&IT raštingumas \\ \hline
 Užduoties Nr.&Komentarai\\ \hline
 	\end{tabular}
 \end{center}
+\subsection{Apibendrinimas}
 \section{Rekomendacijos}
 \section{Priedai}
 \subsection{Klausimynai}
