--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -259,6 +259,15 @@ Užduoties Nr.&Komentarai\\ \hline
 	\end{tabular}
 \end{center}
 \subsection{Apibendrinimas}
+\subsection{Panaudojamumo matai ir siekiai}
+\begin{center}
+	captionof{table}{Panaudojamumo matų ir siekių patikrinimas.}
+    \begin{tabular}{ |p{12cm}| p{3cm} |}
+    \hline
+	Siekis & Ar įvykdytas? \\ \hline
+	
+    \end{tabular}
+\end{center}
 \section{Rekomendacijos}
 \section{Priedai}
 \subsection{Klausimynai}
