--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -80,9 +80,8 @@ Penktojo laboratorinio darbo reikalavimai.
 	\item Nustatyti sumą ir mokėjimo paskirtį.
 	\item Pereiti į kitą mokėjimo žingsnį.
 	\item Pakeisti mokėjimo sumą ir atlikti mokėjimą.
-	\item Pridėti ruošinį.
-	\item Atsidaryti mokėjimo išrašą.
-	\item Nustatyti išrašą nuo 2018-07-01.
+	\item Atsidaryti mokėjimo išrašų langą.
+	\item Nustatyti išrašą nuo 2018-11-13.
 \end{enumerate}
 Matavimai:
 \begin{itemize}
@@ -265,7 +264,19 @@ Užduoties Nr.&Komentarai\\ \hline
     \begin{tabular}{ |p{12cm}| p{3cm} |}
     \hline
 	Siekis & Ar įvykdytas? \\ \hline
-	
+	Vartotojui įvedus ne mažiau, kaip 3 simbolius į paieškos langą bus siūlomi pilni paieškos tekstai. & Taip. \\ \hline
+	Vartotojas galės įvesti sumą bei pradėti pavedimą pagrindiniame lange. & Taip. \\ \hline
+	Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio). & - \\ \hline
+	Vartotojas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų. & - \\ \hline
+	Paieškos rezultatus bus galima filtruoti pagal bent 4 skirtingas kategorijas. & Taip. \\ \hline
+	Vartotojas paieškos langą surasti gebės ne per ilgesnį laiką, nei 30 sekundžių. & Taip. \\ \hline
+	Vartotojas gebės atlikti pavedimą per ne ilgiau kaip 2 minutes. & Taip. \\ \hline
+	97\% vartotojų gebės pirmu bandymu rasti mokėjimo pavedimo funkciją. & - \\ \hline
+	Vartotojas mokėjimų išrašo langą gebės pasiekti ne per daugiau, nei 2 mygtuko paspaudimus. & Taip. \\ \hline
+	80\% vartotojų gebės parinkti tinkamą raktinį paieškos žodį norimiems rezultatams gauti. & - \\ \hline
+	Vartotojas, rinkdamasis gavėją iš pateiktų sąrašų, gebės atlikti pavedimą 3 mygtukų paspaudimu. & - \\ \hline
+	95\% vartotojų gebės grįžti iš mokėjimo patvirtinimo lango ir pakeisti mokėjiumo informaciją. & Taip. \\ \hline
+
     \end{tabular}
 \end{center}
 \section{Rekomendacijos}
