--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -79,9 +79,11 @@ Penktojo laboratorinio darbo reikalavimai.
 	\item Pasirinkti mokėjimą Džiugui Mažuliui iš ankstesnių mokėjimų.
 	\item Nustatyti sumą ir mokėjimo paskirtį.
 	\item Pereiti į kitą mokėjimo žingsnį.
-	\item Pakeisti mokėjimo sumą ir atlikti mokėjimą.
+	\item Pakeisti mokėjimo sumą ir valiutą, bei atlikti mokėjimą.
 	\item Atsidaryti mokėjimo išrašų langą.
-	\item Nustatyti išrašą nuo 2018-11-13.
+	\item Nustatyti išrašą nuo 2018-09-10.
+	\item Pridėtį mokėjimo ruošinį.
+	\item Atlikti mokėjimą pagal ruošinį.
 \end{enumerate}
 Matavimai:
 \begin{itemize}
@@ -296,5 +298,18 @@ Užduoties Nr.&Komentarai\\ \hline
 			\item Ar susidūrėte su sunkumais, netikėtumais?
 	\end{itemize}
 \subsection{Dalyvių rezultatų lentelės}
+\begin{center}
+	\begin{tabular}{ |p{1cm} | p{3cm} | p{4cm} | p{4cm} | p{3cm} |}
+	\hline
+ID&Kas labiausiai patiko?&Kas labiausiai nepatiko?&Kaip vertinate sistemą bendrai?&Ar susidūrėte su sunkumais, netikėtumais?\\ \hline
+1&-&-&-&- \\ \hline
+
+	\end{tabular}
+\end{center}
 \subsection{dalyvio sutikimo dalyvauti testavime raštas}
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=16cm,height=70cm,keepaspectratio]{Sutikimas.png}
+	\caption{Sutikimo raštas}
+\end{figure}
 \end{document}
