--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -82,8 +82,8 @@ Penktojo laboratorinio darbo reikalavimai.
 	\item Pakeisti mokėjimo sumą ir valiutą, bei atlikti mokėjimą.
 	\item Atsidaryti mokėjimo išrašų langą.
 	\item Nustatyti išrašą nuo 2018-09-10.
-	\item Pridėtį mokėjimo ruošinį.
-	\item Atlikti mokėjimą pagal ruošinį.
+	\item Pridėtį mokėjimo ruošinį (nuo pagrindinio lango).
+	\item Atlikti mokėjimą pagal ruošinį (nuo pagrindinio lango).
 \end{enumerate}
 Matavimai:
 \begin{itemize}
@@ -99,9 +99,9 @@ Dalis testavimo vykdoma gyvai, dalis nuotoliniu būdu,naudojant discord programi
 \subsection{Dalyviai}
 \begin{center}
 	\captionof{table}{Dalyvių lentelė}
-	\begin{tabular}{ |p{1cm} | p{2cm} | p{4cm} | p{4cm} |}
+	\begin{tabular}{ |p{1cm} | p{3cm} | p{5cm} | p{5cm} |}
 	\hline
-ID&Amžius&Profesija&IT raštingumas \\ \hline
+ID&IT raštingumas & Naudojimosi el. bankininkyste patirtis & Valandos per dieną prie kompiuterio\\ \hline
 1&-&-&- \\ \hline
 2&-&-&- \\ \hline
 \end{tabular}
@@ -277,7 +277,9 @@ Užduoties Nr.&Komentarai\\ \hline
 	Vartotojas mokėjimų išrašo langą gebės pasiekti ne per daugiau, nei 2 mygtuko paspaudimus. & Taip. \\ \hline
 	80\% vartotojų gebės parinkti tinkamą raktinį paieškos žodį norimiems rezultatams gauti. & - \\ \hline
 	Vartotojas, rinkdamasis gavėją iš pateiktų sąrašų, gebės atlikti pavedimą 3 mygtukų paspaudimu. & - \\ \hline
-	95\% vartotojų gebės grįžti iš mokėjimo patvirtinimo lango ir pakeisti mokėjiumo informaciją. & Taip. \\ \hline
+	95\% vartotojų gebės grįžti iš mokėjimo patvirtinimo lango ir pakeisti mokėjimo informaciją. & Taip. \\ \hline
+	90\% žmonių gebės pasinaudoti mokėjimo ruošiniu atlikdami mokėjimą. & - \\ \hline
+	80\% žmonių gebės susikurti mokėjo ruošinį. & - \\ \hline
 
     \end{tabular}
 \end{center}
