--- a/ZKS5.tex
+++ b/ZKS5.tex
@@ -72,19 +72,19 @@ Penktojo laboratorinio darbo reikalavimai.
 \section{Testavimo aprašas}
 \subsection{Testuojamos užduotys}
 \begin{enumerate}
-	\item Pagrindiniame lange paslėpti sąskaitos informaciją.
-	\item Atlikti paiešką apie mokėjimus.
-	\item Paieškos lange išfiltruoti pagal naujienas.
-	\item Nueiti iki vietinių mokėjimų.
-	\item Pasirinkti mokėjimą Džiugui Mažuliui iš ankstesnių mokėjimų.
-	\item Nustatyti sumą ir mokėjimo paskirtį.
-	\item Pereiti į kitą mokėjimo žingsnį.
-	\item Pakeisti mokėjimo sumą ir valiutą, bei atlikti mokėjimą.
-	\item Atsidaryti mokėjimo išrašų langą.
-	\item Nustatyti išrašą nuo 2018-09-10.
-	\item Pridėtį mokėjimo ruošinį (nuo pagrindinio lango).
-	\item Atlikti mokėjimą pagal ruošinį (nuo pagrindinio lango).
-	\item Atlikti pavedimą nesinaudojant meniu juosta(iš pagrindinio lango).
+	\item Pagrindiniame lange paslėpti sąskaitos informaciją. Sekmės kriterijus: atlikimo laikas mažiau, negu 10 sekundžių, klaidų, pagalbos prašymų 0.
+	\item Atlikti paiešką apie mokėjimus. Sekmės kriterijus: atlikimo laikas mažiau, negu 30 sekundžių, klaidų skaičius ne daugiau 2, pagalbos pagalbos prašymų ne daugiau 1.
+	\item Paieškos lange išfiltruoti pagal naujienas. Sekmės kriterijus: atlikimo laikas mažiau, negu 15 sekundžių, klaidų, pagalbos prašymų 0.
+	\item Nueiti iki vietinių mokėjimų. Sekmės kriterijus: atlikimo laikas mažiau, negu 30 sekundžių, klaidų ne daugiau 1.  pagalbos prašymų 0.
+	\item Pasirinkti mokėjimą Džiugui Mažuliui iš ankstesnių mokėjimų. Sekmės kriterijus: atlikimo laikas mažiau, negu 10 sekundžių, klaidų, pagalbos prašymų 0.
+	\item Nustatyti sumą ir mokėjimo paskirtį. Sekmės kriterijus: atlikimo laikas mažiau, negu 25 sekundės, klaidų, pagalbos prašymų 0.
+	\item Pereiti į kitą mokėjimo žingsnį. Sekmės kriterijus: atlikimo laikas mažiau, negu 10 sekundžių, klaidų, pagalbos prašymų 0.
+	\item Pakeisti mokėjimo sumą ir valiutą, bei atlikti mokėjimą. Sekmės kriterijus: atlikimo laikas mažiau, negu 40 sekundžių, klaidų ne daugiau 1, pagalbos prašymų 0.
+	\item Atsidaryti mokėjimo išrašų langą. Sekmės kriterijus: atlikimo laikas mažiau, negu 15 sekundžių, klaidų, pagalbos prašymų 0.
+	\item Nustatyti išrašą nuo 2018-09-10. Sekmės kriterijus: atlikimo laikas mažiau, negu 30 sekundžių, klaidų, pagalbos prašymų 0.
+	\item Pridėtį mokėjimo ruošinį (nuo pagrindinio lango). Sekmės kriterijus: atlikimo laikas mažiau, negu 80 sekundžių, klaidų ne daugiau 2 pagalbos prašymų ne daugiau 1.
+	\item Atlikti mokėjimą pagal ruošinį (nuo pagrindinio lango). Sekmės kriterijus: atlikimo laikas mažiau, negu 60 sekundžių, klaidų ne daugiau 1, pagalbos prašymų 0.
+	\item Atlikti pavedimą nesinaudojant meniu juosta(iš pagrindinio lango). Sekmės kriterijus: atlikimo laikas mažiau, negu 40 sekundžių, klaidų ne daugiau 1, pagalbos prašymų 0.
 \end{enumerate}
 Matavimai:
 \begin{itemize}
